# ast2vec

./: .dockerignore  .gitignore  Dockerfile  README.md  ast2vec.py  ast2vec.yml  config.properties  handler.py  prometheus.yml  pyproject.toml  python_ast_utils.py  python_ast_utils2.py  rtgae2.py  tree.py  tree_grammar.py  tutorial.ipynb  variable_classification_test.py  variable_classifier.py  variable_classifier2.py
mock_dataset/trace0/: step0.py  step2.py  step3.py
mock_dataset/trace1/: step1.py  step2.py  step3.py
mock_dataset/trace2/: step1.py  step2.py  step3.py  step4.py  step5.py  step6.py  step7.py  step8.py  step9.py
mock_dataset/trace3/: step0.py  step1.py  step2.py  step3.py  step5.py  step6.py
mock_dataset/trace4/: step0.py  step3.py  step4.py  step5.py  step6.py
mock_dataset/trace5/: step0.py  step1.py  step2.py  step3.py  step4.py  step5.py  step6.py  step7.py
mock_dataset/trace6/: step0.py  step1.py  step2.py  step3.py  step4.py  step5.py  step6.py  step7.py
mock_dataset/trace7/: step0.py  step1.py
mock_dataset/trace8/: step0.py
mock_dataset/trace9/: step0.py  step1.py  step2.py  step3.py
version_0_1_0/: python_ast_utils.py  recursive_tree_grammar_auto_encoder.py  variable_classifier.py
