[tool.poetry]
name = "ast2vec"
version = "0.2.0"
description = "The ast2vec neural network to translate Python syntax trees to vectors and back."
authors = ["Benjamin Paassen", "Jessica McBroom", "Boris Shminke <boris@shminke.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
torch = "*"
astor = "*"
matplotlib = "*"
torch-model-archiver = "*"
torchserve = "*"
nvgpu = "*"
tqdm = "*"
pymemcache = "*"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
