[tool.poetry]
name = "ast2vec"
version = "0.2.0"
description = "The ast2vec neural network to translate Python syntax trees to vectors and back."
authors = ["Benjamin Paassen", "Jessica McBroom", "Boris Shminke <boris@shminke.com>"]

[tool.poetry.dependencies]
python = ">= 3.8.1, < 3.13"
# ast2vec dependencies
numpy = "*"
torch = "<2.0.0"
astor = "*"
# serving dependencies
torchserve = "*"
torch-model-archiver = "*"
nvgpu = "*"
pyyaml = "*"
pymemcache = "*"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
